fixed overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,75 +1,6 @@
-* {
-	box-sizing: border-box;
-	font-family: Geist;
-}
-
-.navbar {
-	padding: 0;
-	position: fixed;
-	z-index: 9999999;
-	width: 100%;
-}
-
-.navigation {
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-	flex-wrap: nowrap;
-	gap: 2%;
-	background-color: black;
-	width: 100%;
-	padding: 20px 0px;
-	text-align: center;
-}
-
-.items-container {
-	justify-content: flex-start;
-	display: flex;
-	gap: 10px;
-}
-.nav-items {
-	background-color: #eee9e3;
-	color: black;
-	padding: 12px 25px;
-	font-size: 16px;
-	font-weight: 600;
-	border-radius: 25px;
-	text-decoration: none;
-	transition: 0.15s;
-}
-
-.login {
-	background-color: #ff4400;
-	color: white;
-	padding: 17px 60px;
-	font-weight: 600;
-	font-size: 16px;
-	border-radius: 37px;
-	border: none;
-	text-decoration: none;
-	cursor: pointer;
-}
-
-.nav-items:hover,
-.login:hover {
-	opacity: 0.8;
-}
-
-.nav-items:active,
-.login:active {
-	opacity: 0.6;
-}
-
-.logo {
-	width: 118px;
-	height: 63px;
-}
-
 /* Pages Container */
 .pages-container {
-  margin-top: 70px; 
   height: calc(100vh - 70px);
-  overflow-y: auto;
   scroll-snap-type: y mandatory;
 }
 
